--- a/.classpath
+++ b/.classpath
@@ -5,7 +5,8 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry exported="true" kind="lib" path="F:/My Projects/JWorkSpace/ADT/appcompat_v7/libs/android-support-v7-appcompat.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/appcompat_v7"/>
+	<classpathentry kind="lib" path="libs/gson-2.3.1.jar"/>
+	<classpathentry kind="lib" path="F:/My Projects/JWorkSpace/ADT/MyMovies/libs/android-support-v7-appcompat.jar"/>
+	<classpathentry kind="lib" path="F:/My Projects/JWorkSpace/ADT/MyMovies/libs/android-support-v4.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
