--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,7 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="lib" path="libs/gson-2.3.1.jar"/>
-	<classpathentry kind="lib" path="F:/My Projects/JWorkSpace/ADT/MyMovies/libs/android-support-v7-appcompat.jar"/>
-	<classpathentry kind="lib" path="F:/My Projects/JWorkSpace/ADT/MyMovies/libs/android-support-v4.jar"/>
+	<classpathentry kind="lib" path="libs/android-support-v7-appcompat.jar"/>
+	<classpathentry kind="lib" path="libs/android-support-v4.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
